# cse101

./: README.md  cse101.code-workspace  cspell.json  plot_trajectory.py  pyproject.toml  teensy_bench.py  test_blinka.py  welcome.py
Board 01 - CircuitPython, GPIO, NeoPixels, RC Circuit/: blink_led.py  cycle_neopixel.py  rc_circuit.py
Board 01 - CircuitPython, RC Circuit/: button_debounce.py  cycle_neopixel.py  pwm_led.py  rc_circuit.py
Board 02 - Bipolar Junction Transistors/: bjt_amplification.py
Board 03 - Diode IV Curve, Photon Energy Band Gap, Ohm's Law/: band_gap.py  ohms_plot.py  ohms_read.py
Board 03 - Diodes, Ohm's Law/: band_gap.py  diode_ivcurve.py  ohms_read.py
Board 04 - Signal Generators, Op Amps, RLC Resonance/: ad9833_blinka.py  op_amp.py  rlc_measure.py  rlc_plot_actual.py  rlc_plot_theory.py  rlc_resonance.csv  samples_ad9833.csv  signal_gen.py
Board 05 - Decibels, Filters, Fourier Analysis/: wave_generator.py
Board 05 - Decibels, Twin-T Notch Filter, Harmonics/: ad9833_blinka.py  notch_filter.py  rc_filter.py
Board 06 - Frequency Counter, 7-Segment LED/: clock_settings.csv  frequency_counter.py  ls7366r_blinka.py  seven_segment.py
Board 06 - Nyquist Limit, Frequency Counter, 7-Segment LED/: frequency_counter.py  seven_segment.py
Board 06 - Nyquist Limit, Geiger Counter, 7-Segment LED/: geiger_counter.py  seven_segment.py
Board 07 - Electromagnets, Biot-Savart Law/: biot_savart.py
Board 08 - Synchronous Circuits, Shift Registers/: scrolling_light.py  shift_register.py
Session 01 - Scientific Computing, JSON Files/: line_graphs.py  (+5 more)
(+136 files in other folders)
