[project]
name = "cse101"
version = "0.1.0"
description = "Foundations of Control System Electronics (CSE101)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "adafruit-blinka>=8.68.0",
    "adafruit-circuitpython-ads1x15>=3.0.2",
    "adafruit-circuitpython-busdevice>=5.2.14",
    "adafruit-circuitpython-debouncer>=2.0.13",
    "adafruit-circuitpython-ina219>=3.4.31",
    "adafruit-circuitpython-mcp4725>=1.4.19",
    "adafruit-circuitpython-mlx90393>=2.3.7",
    "adafruit-circuitpython-mmc56x3>=1.0.14",
    "adafruit-circuitpython-motor>=3.4.18",
    "adafruit-circuitpython-msa301>=1.3.11",
    "adafruit-circuitpython-neopixel>=6.3.18",
    "adafruit-circuitpython-pixelbuf>=2.0.10",
    "adafruit-circuitpython-register>=1.11.1",
    "adafruit-circuitpython-si5351>=1.4.9",
    "adafruit-circuitpython-ticks>=1.1.5",
    "black>=25.12.0",
    "hidapi>=0.14.0.post4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyqt6>=6.10.1",
    "ruff>=0.14.8",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I", "C4", "ISC", "SIM", "TCH"]
lint.ignore = []
show-fixes = true
target-version = "py312"